@@ -25,6 +25,7 @@ enum {
 	HXQUOTE_LDAPFLT,
 	HXQUOTE_LDAPRDN,
 	HXQUOTE_BASE64,
+	HXQUOTE_URIENC,
 	_HXQUOTE_MAX,
 };
 
