@@ -4,6 +4,7 @@ HEAD
 ====
 Enhancements:
 - string: add HX_strchr2
+- string: add HXQUOTE_URIENC mechanism for HX_strquote
 Changes:
 - defs: HXsizeof_member becomes FIELD_SIZEOF
   (to match the Linux kernel's name)
